# qwen-qlora-train

./: .gitignore  README.md  package-lock.json  pyproject.toml
configs/qwen3/: 1.7b.yaml  4b.yaml  8b.yaml
configs/qwen35/: 0.8b.yaml  2b.yaml  4b.yaml  9b.yaml
docs/: THIRD_PARTY_LICENSES.md  commands.md  config-reference.md  dataset-pipeline.md  index.md  inference.md  merge.md  post-merge-workflow.md  project-layout.md  quickstart.md  reasoning.md  setup.md  training-pipeline.md  troubleshooting.md
docs/.vitepress/: config.ts
qwen_qlora_train/: __init__.py  config.py  data_pipeline.py  dataset_parsers.py  infer.py  merge_cpu.py  model_utils.py  train.py
