[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
#  qwen-qlora-train
#  Agent-style SFT / QLoRA training for Qwen3 and Qwen3.5 models.
#
#  Install order:
#    pip install "unsloth[cu124-torch260] @ git+https://github.com/unslothai/unsloth.git"
#    pip install git+https://github.com/techwithsergiu/qwen35-toolkit.git
#    pip install -e .
#
#  Both projects pin transformers==5.2.0 (unsloth ceiling, Qwen3.5 minimum).
#  unsloth is intentionally NOT in dependencies — install it first (above)
#  so pip does not override the torch version it brings.
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "qwen-qlora-train"
version = "0.1.0"
description = "Agent-style SFT / QLoRA training pipeline for Qwen3 and Qwen3.5 on limited VRAM"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

# ── Core dependencies ─────────────────────────────────────────────────────────
# torch is intentionally absent — install manually with --index-url cu124/cu126.
#
# Versions pinned to unsloth 2026.3.x compatibility windows:
#   transformers : ==5.2.0   (unsloth <=5.2.0  ∩  Qwen3.5 >=5.2.0)
#   trl          : ==0.24.0  (unsloth <=0.24.0, excludes 0.19.0)
#   datasets     : <4.4.0    (unsloth excludes 4.4+)
#   unsloth      : pre-install via git (see header), not listed here
dependencies = [
    # Pinned to unsloth-compatible range
    "transformers==5.2.0",
    "datasets>=3.4.1,<4.4.0",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.13.0",
    "safetensors>=0.7.0",
    "huggingface_hub>=1.6.0",
    "psutil>=7.2.2",
    # Training-specific
    "peft>=0.18.1",
    "trl==0.24.0",
    "pyyaml>=6.0.3",
    # unsloth and unsloth_zoo are intentionally absent —
    # install them manually BEFORE pip install -e . (see install order above)
]

# ── CLI entrypoints ───────────────────────────────────────────────────────────
[project.scripts]
qlora-train  = "qwen_qlora_train.train:main"
qlora-merge  = "qwen_qlora_train.merge_cpu:main"
qlora-infer  = "qwen_qlora_train.infer:main"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where     = ["."]
include   = ["qwen_qlora_train*"]
exclude   = ["tests*"]

[tool.setuptools.package-data]
"qwen_qlora_train" = ["py.typed"]

# ── Dev / linting (optional) ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
